<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/headLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/md_black_1000"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="7dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal|center_vertical"
        android:padding="30dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/email"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal|center_vertical"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <Button
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/sign_in"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@color/md_green_400"
                android:textColor="@color/colorAccent"
                />

    </LinearLayout>

</LinearLayout>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/borderlessButtonStyle"
        android:text="@string/new_user_tap_here_to_register"
        android:textColor="@color/md_black_1000"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>

</LinearLayout>

